; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/loader/extr_main.c_showhelp.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/loader/extr_main.c_showhelp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"LOADER: Syntax:\0A\00", align 1
@.str.1 = private unnamed_addr constant [65 x i8] c"LOADER:         loader [switches] [executable/object file path]\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"LOADER: Switches:\0A\00", align 1
@.str.3 = private unnamed_addr constant [63 x i8] c"LOADER:         -trans      (-t):   translate from exe to sym\0A\00", align 1
@.str.4 = private unnamed_addr constant [50 x i8] c"LOADER:         -load       (-l):   load symbols\0A\00", align 1
@.str.5 = private unnamed_addr constant [52 x i8] c"LOADER:         -unload     (-u):   unload symbols\0A\00", align 1
@.str.6 = private unnamed_addr constant [61 x i8] c"LOADER:         -reload     (-r):   reload some/all symbols\0A\00", align 1
@.str.7 = private unnamed_addr constant [59 x i8] c"LOADER:         -verbose    (-v):   be a bit more verbose\0A\00", align 1
@.str.8 = private unnamed_addr constant [59 x i8] c"LOADER:         -install    (-i):   install pICE debugger\0A\00", align 1
@.str.9 = private unnamed_addr constant [61 x i8] c"LOADER:         -uninstall  (-x):   uninstall pICE debugger\0A\00", align 1
@.str.10 = private unnamed_addr constant [57 x i8] c"LOADER:         -break      (-b):   break into debugger\0A\00", align 1
@.str.11 = private unnamed_addr constant [64 x i8] c"LOADER:         -serial     (-ser): start serial line terminal\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @showhelp() #0 {
  %1 = call i32 (...) @banner()
  %2 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0))
  %4 = call i32 @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %5 = call i32 @printf(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.3, i64 0, i64 0))
  %6 = call i32 @printf(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.4, i64 0, i64 0))
  %7 = call i32 @printf(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.5, i64 0, i64 0))
  %8 = call i32 @printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.6, i64 0, i64 0))
  %9 = call i32 @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.7, i64 0, i64 0))
  %10 = call i32 @printf(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.8, i64 0, i64 0))
  %11 = call i32 @printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.9, i64 0, i64 0))
  %12 = call i32 @printf(i8* getelementptr inbounds ([57 x i8], [57 x i8]* @.str.10, i64 0, i64 0))
  %13 = call i32 @printf(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.11, i64 0, i64 0))
  ret void
}

declare dso_local i32 @banner(...) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
